# SDL_Demo

./: README.md
01_hello_SDL/: CMakeLists.txt  main  main.cpp
02_getting_an_image_on_the_screen/: CMakeLists.txt  main  main.cpp
03_event_driven_programming/: CMakeLists.txt  main.cpp
04_key_presses/: CMakeLists.txt  main.cpp
05_Optimized_Surface_Loading_and_Soft_Stretching/: CMakeLists.txt  main.cpp
06_Extension_Libraries_and_Loading_Other_Image_Formats/: CMakeLists.txt  main.cpp
07_Texture_Loading_and_Rendering/: CMakeLists.txt  main.cpp
46_multithreading/: CMakeLists.txt  main.cpp
